ci: :construction_worker: add changelog generator

--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -19,6 +19,31 @@ permissions:
   contents: read
 
 jobs:
+  create_changelog:
+    name: Generate changelog
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get previous tag
+        id: previous_tag
+        run: echo "previous_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo '')" >> $GITHUB_ENV
+
+      - name: Github Release Changelog Generator
+        uses: jaywcjlove/changelog-generator@v1.9.3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
+          custom-emoji: "feat⭐,fix🐞,docs📖,chore💄,style🎨,type🆎,test⛑️,refactor🐝,website🌍,revert🔙,clean💊,perf📈,ci💢,build⛽"
+          template: |
+            ## Bugs
+            {{fix}}
+            ## Feature
+            {{feat}}
+            ## Improve
+            {{refactor,perf,clean}}
+            ## Misc 
+            {{chore,style,ci||🔶 Nothing change}}
+            ## Unknown
+            {{__unknown__}}
   build:
     runs-on: ubuntu-latest
 
@@ -52,7 +77,10 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           body: |
-            Auto-generated release notes and changelog.
+            ${{ steps.changelog.outputs.compareurl }}
+
+            ${{ steps.changelog.outputs.changelog }}
+
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
