--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -59,7 +59,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@2.4.2
+        uses: gradle/gradle-build-action@v2.7.0
         with:
           arguments: build
 
