--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -22,6 +22,7 @@ jobs:
   create_changelog:
     name: Generate changelog
     runs-on: ubuntu-latest
+    needs: release
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Get previous tag
