--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -22,7 +22,7 @@ jobs:
   create_changelog:
     name: Generate changelog
     runs-on: ubuntu-latest
-    needs: release
+    needs: build
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Get previous tag
@@ -30,11 +30,11 @@ jobs:
         run: echo "previous_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo '')" >> $GITHUB_ENV
 
       - name: Github Release Changelog Generator
-        uses: jaywcjlove/changelog-generator@v1.9.3
+        uses: jaywcjlove/changelog-generator@main
+        id: changelog
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
-          custom-emoji: "feat⭐,fix🐞,docs📖,chore💄,style🎨,type🆎,test⛑️,refactor🐝,website🌍,revert🔙,clean💊,perf📈,ci💢,build⛽"
           template: |
             ## Bugs
             {{fix}}
@@ -48,7 +48,6 @@ jobs:
             {{__unknown__}}
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -65,40 +64,43 @@ jobs:
           arguments: build
 
       - name: Rename artifact to use tag as version
-        if: startsWith(github.ref, 'refs/heads/v')
+        if: startsWith(github.ref, 'refs/tags/v')
         run: |
           mv build/libs/*.jar build/libs/archivist-${{github.ref_name}}.jar
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        if: startsWith(github.ref, 'refs/heads/v')
+        uses: actions/upload-artifact@v3
+        if: startsWith(github.ref, 'refs/tags/v')
+        id: artifact
         with:
           name: artifact
           path: build/libs/*.jar
 
   release:
-    needs: build
+    needs:
+      - build
+      - create_changelog
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: artifact
+          path: build/libs
+
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          name: Release ${{ github.ref_name }}
           draft: false
           body: |
             ${{ steps.changelog.outputs.compareurl }}
 
             ${{ steps.changelog.outputs.changelog }}
-
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: artifact
-          path: build/libs/*.jar
+          files: |
+            build/libs/*.jar
