--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -9,43 +9,33 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     tags:
       - "v*.*.*"
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: write
 
 jobs:
   create_changelog:
-    name: Generate changelog
+    name: ✏️ Generate changelog
     runs-on: ubuntu-latest
     needs: build
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - name: Get previous tag
-        id: previous_tag
-        run: echo "previous_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo '')" >> $GITHUB_ENV
-
-      - name: Github Release Changelog Generator
-        uses: jaywcjlove/changelog-generator@main
+      - name: ✏️ Generate release changelog
         id: changelog
+        uses: heinrichreimer/github-changelog-generator-action@v2.3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          filter: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
-          template: |
-            ## Bugs
-            {{fix}}
-            ## Feature
-            {{feat}}
-            ## Improve
-            {{refactor,perf,clean}}
-            ## Misc 
-            {{chore,style,ci||🔶 Nothing change}}
-            ## Unknown
-            {{__unknown__}}
+          onlyLastTag: true
+          stripHeaders: true
+          stripGeneratorNotice: true
+          base: CHANGELOG.md
+          output: CHANGELOG.md
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -55,8 +45,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: "17"
+          distribution: "temurin"
 
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2.7.0
@@ -98,9 +88,6 @@ jobs:
         with:
           name: Release ${{ github.ref_name }}
           draft: false
-          body: |
-            ${{ steps.changelog.outputs.compareurl }}
-
-            ${{ steps.changelog.outputs.changelog }}
+          body: ${{ steps.changelog.outputs.changelog }}
           files: |
             build/libs/*.jar
