chore: tweak release note config file

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -13,14 +13,13 @@ changelog:
       - help wanted
     authors:
       - octocat
+      - dependabot
   categories:
     - title: Breaking Changes 🛠
       labels:
-        - Semver-Major
         - breaking-change
     - title: Exciting New Features 🎉
       labels:
-        - Semver-Minor
         - enhancement
     - title: Other Changes
       labels:
